fixed spacing for the products after search

--- a/frontend/src/Components/SearchBar/SearchBar.css
+++ b/frontend/src/Components/SearchBar/SearchBar.css
@@ -47,6 +47,8 @@
 
 .search-results {
   display: flex;
+  padding-top: 30px;
+  padding-bottom: 30px;
   flex-wrap: wrap; /* Allows items to wrap to the next line if they don't fit in one row */
   gap: 20px; /* Adds space between items */
   justify-content: center; /* Centers the items */
